# smaugworld

./: CMakeLists.txt  DEADJOE  Makefile  ]  cow.c  hunter.c  hunter.h  main.c  sheep.c  sheep.h  smaug.c  smaug.h  smaugworld  smaugworld.c  smaugworld.h  smg  thief.c  thief.h
A/: Makefile  cow.c  cow.h  hunter.c  hunter.h  sheep.c  smaug.c  smaugworld.c  smaugworld.h  thief.c  thief.h
B/: 2  Makefile  cleanSem.h  cow.c  cow.h  sheep.c  sheep.h  smaug.c  smaug.h  smaugworld.c  smaugworld.h
smaugProcess/: smaugProcess.c  smaugProcess.h
smaugThread/: smaugThread.c  smaugThread.h
